Fix address and search field dropdowns being covered by other elements

--- a/toolbar-components/_address-field.scss
+++ b/toolbar-components/_address-field.scss
@@ -2,6 +2,10 @@
 
 @mixin styles {
   .UrlBar-AddressField {
+    z-index: 2;
+    // sets z-index 1 higher than badges of extensions toolbar component,
+    // so they don't show through the dropdown
+
     margin: calc(
         calc(
             variables.$value-of-address-bar-height -
@@ -10,6 +14,12 @@
       )
       variables.$value-of-window-edge-distance;
     flex: 1 1 100%;
+
+    &:has(.OmniDropdown) {
+      z-index: 3;
+      // sets z-index 1 higher than previously set when the dropdown is visible,
+      // so the dropdown of this address field doesn't get covered by other address or search fields when focused
+    }
 
     .UrlBar-UrlFieldWrapper {
       min-width: unset;
